# cscs-reframe-tests

./: .gitignore  CONTRIBUTING.md  Jenkinsfile  JenkinsfileDeploy  JenkinsfileDeployReFrame  LICENSE  README.md  alps-test-suites.md  features.md  portable_tests.md  requirements.txt
.github/: pull_request_template.md  pull_request_template.yml
.github/workflows/: github-pr-stats.yml  github-repo-stats.yml  main.yml
checks/apps/sphexa/src/main/src/io/: CMakeLists.txt
checks/compile/: haswell_fma_check.py  libsci_acc_symlink.py  libsci_resolve.py
checks/gssr/: check_dcgm_hook.py
checks/jg_sandbox/: jgC.py
checks/mch/: automatic_arrays_acc.py  collectives_halo.py  cuda_stress_test.py  gpu_direct_acc.py  gpu_direct_cuda.py  openacc_cuda_mpi_cppstd.py
checks/mixins/: container_engine.py  container_engine_cpe.py  cuda_visible_devices.py  cuda_visible_devices_all.py  extra_launcher_options.py  sarus_extra_launcher_options.py  slurm_mpi_options.py  slurm_mpi_pmi2.py  slurm_mpi_pmix.py  uenv_setup.py  uenv_slurm_mpi_options.py
checks/prgenv/: affinity_check.py  cpu_target_check.py  cuda_fortran.py  cuda_nvml.py  cuda_samples.py  environ_check.py  helloworld.py  jg_runonly.py  mpi.py  mpi_cpi.py  mpi_t.py  openacc.py  openacc_checks.py  opencl.py  opencl_check.py  prgenv_check.py  ssh_environ_check.py  uenv_fixincludes.py  ulimit_check.py
checks/prgenv/cuda/src/: CMakeLists.txt  gpudirect.cpp  intranode_pinned_host_comm.cpp
checks/uenv/: check_osu_micro_benchmarks.py  check_osu_micro_benchmarks_uenv.py  gromacs_check.py  helloworld.py  lammps_check.py
checks_cpe/prgenv/: affinity_check.py  mpi.py
checks_jc/: affinity_check.py  alloc_speed.py  gpu_burn.py  mpi.py  opencl.py  osu_tests.py  stream.py  todi.py  utils.py
checks_jc/prgenv/: opencl.py  src
ci/: alps_bencher.yml  alps_cpe.yml  alps_cpe_todi.yml  alps_login.yml  alps_uenv.yml  cpe.yml  cscs.yml  daily.yml  del.yml  hello.yml  qe.yml  readme.md  test_envs.yml  vasp.yml  vcue.yml  x
ci/scripts/: activate_reframe.sh  alps.sh  alps_uenv.sh  oneuptime.py  prepare_uenvs.sh  slack_notify.py
ci/systems-uenv/: run_login_baremetal_daily_checks.sh  santis_login_baremetal_daily_checks.sh
config/: README.md  ault.py  common.py  common_logging.json  cscs-uenv.py  cscs.py  daint.py  eiger.py  generate.py  generate_config.py  generate_json.py  hohgant.py  reframe_config_template.j2  utils.py
config/balfrin/: cuda_visible_devices.sh  squashfs.py
config/hohgant/: squashfs.py
config/manali/: cpe.py  squashfs.py
config/systems/: alps-daint.py  (+21 more)
config/systems-firecrest/: README.md  clariden.py  daint-firecrest.py  daint.py  eiger.py  todi.py
eligible_tests/: README.md  eligible_tests_daint_mode-maintenance.md  eligible_tests_daint_mode-production.md  eligible_tests_daint_tags-vs-node-validator.md  list_tests.py
sandbox/: test_data.json
uenv_checks/: mixins
utility/: bencher_metric_format.py  nvcr.py
(+398 files in other folders)
